<resources>
    <string name="app_name">Maple</string>
    <string name="back_button">Back button</string>
    <string name="select_login_type">Select login type</string>
    <string name="login_type_admin">Admin</string>
    <string name="login_type_editor">Editor</string>
    <string name="login_type_user">User</string>
    <string name="login_title">Login</string>
    <string name="sign_out">Sign out</string>
    <string name="home_title">Home</string>
    <string name="home_settings_title">Home Settings</string>
    <string name="account_type_mismatch_text">Please select correct account type</string>
    <string name="ok_text">OK</string>
    <string name="take_free_trial_text">Take Free Trial</string>
    <string name="buy_premium_text">Buy Premium</string>
    <string name="cancel_text">Cancel</string>
    <string name="total_requests">Total Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="_150">150</string>
    <string name="_10">10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newsModel">News</string>
    <string name="user_image">User Image</string>
    <string name="tab_text_1">Free</string>
    <string name="tab_text_2">Premium</string>
    <string name="tab_text_3">Knowledge</string>
    <string name="tab_text_4">Projects</string>
    <string name="dummy_text">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.</string>
    <string name="news_image">News Image</string>
    <string name="click_to_view">See full article</string>
    <string name="processing_text">Processing...</string>
    <string name="something_went_wrong_text">Something went wrong</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="submit_text">Submit</string>
    <string name="image_text">Image</string>
    <string name="upload_image_text">Upload image</string>
    <string name="uploaded_image_text">Image uploaded</string>
    <string name="successfully_uploaded_image_text">Image uploaded successfully</string>
    <string name="successfully_submitted_text">Submitted successfully!</string>
    <string name="pending_for_approvals_text">Pending for Approvals</string>
    <string name="approve_text">Approve</string>
    <string name="reject_text">Reject</string>
    <string name="admin_text">Admin</string>
    <string name="upload_article_text">Upload Article</string>
    <string name="home_text">Home</string>
    <string name="italic_text">Italic</string>
    <string name="bold_text">Bold</string>
    <string name="underline_text">Underline</string>
    <string name="article_type_text">Article type</string>
    <string name="free_text">Free</string>
    <string name="paid_text">Paid</string>
    <string name="knowledge_series_text">Knowledge series</string>
    <string name="project_reports_text">Project reports</string>
    <string name="article_interest_area_text">Article Tag</string>
    <string name="sample_date">Date : 07–06–2020</string>
    <string name="see_more_text">See more</string>
    <string name="see_less_text">See less</string>
    <string name="no_subscription_alert_text">You do not have Premium subscription. Please take Free Trial for 10 days / buy Premium subscription.</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="occupation">Occupation</string>
    <string name="business">Business</string>
    <string name="job">Job</string>
    <string name="my_interests">My Interests</string>
    <string name="choose">Choose</string>
    <string name="interest_types">Sports, Politics, Editorials</string>
    <string name="about_my_business">About My Business / Job</string>
    <string name="verified">(Verified)</string>
    <string name="unverified"><b>Click To Verify</b></string>
    <string name="required">Required</string>
    <string name="profile_update_success">Profile Updated Successfully</string>
    <string name="profile_update_fail">Profile Update Failed</string>
    <string name="choose_your_interests">Choose Your Interests</string>
    <string name="done">Done</string>
    <string name="select_interest">Please select Interests</string>
    <string name="no_items_available">No items available</string>
    <string name="import_export_text">Import export</string>
    <string name="economics_text">Economics</string>
    <string name="success_story_text">Success story</string>
    <string name="innovation_text">Innovation</string>
    <string name="stock_market_text">Stock market</string>
    <string name="start_up_text">Start up</string>
    <string name="technology_text">Technology</string>
    <string name="international_text">International</string>
    <string name="service_text">Service</string>
    <string name="manufacturing_text">Manufacturing</string>
    <string name="business_text">Business</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="add_address">Add address</string>
    <string name="state">State</string>
    <string name="add_state">Add State</string>
    <string name="country">Country</string>
    <string name="select_country">Select Your Country</string>
    <string name="click_choose_to_select">Click Choose to select</string>
    <string name="min_10_chars_accepted">Minimum 10 characters accepted</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
