<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_login_type"
        style="@style/header_text_style"/>

    <com.coolapps.yo.maple.widget.MapleButton
        android:id="@+id/admin_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/maple_button_height"
        android:layout_marginStart="@dimen/standard_margin_between_views"
        android:layout_marginEnd="@dimen/standard_margin_between_views"
        android:layout_marginTop="@dimen/margin_below_header"
        android:text="@string/login_type_admin"/>

    <com.coolapps.yo.maple.widget.MapleButton
        android:id="@+id/editor_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/maple_button_height"
        android:layout_marginStart="@dimen/standard_margin_between_views"
        android:layout_marginEnd="@dimen/standard_margin_between_views"
        android:layout_marginTop="@dimen/standard_margin_between_views"
        android:text="@string/login_type_editor" />

    <com.coolapps.yo.maple.widget.MapleButton
        android:id="@+id/user_login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/maple_button_height"
        android:layout_marginStart="@dimen/standard_margin_between_views"
        android:layout_marginEnd="@dimen/standard_margin_between_views"
        android:layout_marginTop="@dimen/standard_margin_between_views"
        android:text="@string/login_type_user" />

</LinearLayout>