<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/margin5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin10"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/profile_card_dimension"
            android:layout_height="@dimen/profile_card_dimension"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin10"
            app:cardCornerRadius="@dimen/profile_card_radius">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                android:src="@drawable/person_icon" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="italic"/>

        <EditText
            android:hint="@string/your_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:id="@+id/etUserName"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:padding="@dimen/margin5"
                android:background="@drawable/background_choose_button"
                android:text="@string/unverified"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:text="@string/fui_phone_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <EditText
            android:hint="@string/fui_phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:id="@+id/etPhoneNumber"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:importantForAutofill="no"
            android:digits="1234567890"
            android:maxLength="10"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:text="@string/occupation"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin5"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/rbBusiness"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:text="@string/job"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:id="@+id/rbJob"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_interests"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/chooseInterests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="@dimen/margin5"
                android:background="@drawable/background_choose_button"
                android:text="@string/choose"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/myInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin1"
            android:layout_marginTop="@dimen/margin5"
            android:background="@color/gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:text="@string/about_my_business"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etAboutMyBusiness"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin5"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:hint="@string/about_my_business"
            android:textStyle="normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/submitProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin10"
            android:background="@drawable/background_rounded_corners"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="@dimen/margin10"
            android:text="@string/submit_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>