<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/standard_margin_between_views">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/plain_text_style"
                android:text="@string/title_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="3"
                style="@style/plain_text_style"
                android:id="@+id/title_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/standard_margin_between_views"
            android:layout_below="@+id/title_container"
            android:id="@+id/description_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/description_text"
                android:layout_weight="1"
                style="@style/plain_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="3"
                android:id="@+id/description_edit_text"
                android:layout_width="0dp"
                style="@style/plain_text_style"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/standard_margin_between_views"
            android:layout_below="@+id/description_container"
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/image_text"
                android:layout_weight="1"
                style="@style/plain_text_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/image_upload_button"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_image_text" />

            <TextView
                android:visibility="gone"
                android:layout_weight="3"
                android:id="@+id/image_path_text"
                android:layout_width="0dp"
                android:text="@string/uploaded_image_text"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <com.coolapps.yo.maple.widget.MapleButton
            android:id="@+id/submit_button"
            android:layout_marginTop="@dimen/standard_margin_between_views"
            android:layout_width="match_parent"
            android:layout_height="@dimen/maple_button_height"
            android:layout_below="@+id/image_container"
            android:text="@string/submit_text" />

    </RelativeLayout>

</ScrollView>