<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/newsCard"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin5"
    app:cardCornerRadius="@dimen/margin5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin5">

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/news_image_height"
            android:layout_alignParentTop="true"
            android:src="@drawable/preview_image"
            android:contentDescription="@string/news_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsImage"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dummy_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsTitle"
            android:layout_marginTop="@dimen/margin5"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/dummy_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newsDescription"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin5"
            android:background="@color/purple"
            android:padding="@dimen/margin2"
            android:text="@string/click_to_view"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>