<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="@dimen/margin5"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/textProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:background="@drawable/maple_button_background"
        android:gravity="center_vertical"
        android:padding="@dimen/margin10">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image_text"
            android:src="@drawable/profile_icon" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image_text"
            android:src="@drawable/next_blue_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:layout_toEndOf="@id/icon"
            android:text="@string/profile"
            android:textColor="@color/buttonTextColor"
            android:textStyle="normal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProfile"
        android:layout_margin="@dimen/margin5"
        android:background="@drawable/maple_button_background"
        android:gravity="center_vertical"
        android:padding="@dimen/margin10">

        <ImageView
            android:id="@+id/logoutIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/image_text"
            android:src="@drawable/logout_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin10"
            android:layout_toEndOf="@id/logoutIcon"
            android:text="@string/sign_out"
            android:textColor="@color/buttonTextColor"
            android:textStyle="normal" />

    </RelativeLayout>

</RelativeLayout>